--- a/twinkle_eval/config.template.yaml
+++ b/twinkle_eval/config.template.yaml
@@ -21,6 +21,7 @@ evaluation:
     - "datasets/dataset1/"
     - "datasets/dataset2/"
   run_id: "exp-001"         # 批次或實驗編號
+  creator: "user"           # 評測執行者
   evaluation_method: "box"  # 評測方法（支援 "pattern" 或 "box"）
   system_prompt:             # 系統提示詞，僅於 box 評測方法中使用
     zh: |
